@@ -10,7 +10,6 @@ import org.springframework.data.mongodb.core.mapping.Document;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Document
 public class OlympicGamesEntity {
@@ -88,7 +87,7 @@ public class OlympicGamesEntity {
     public OlympicGames toOlympicGames() {
         List<Discipline> disciplines = this.disciplinesEntities.stream()
                 .map(DisciplineEntity::toDiscipline)
-                .collect(Collectors.toList());
+                .toList();
         return new OlympicGames(edition, hostingPlace, startDate, summerGames, disciplines);
     }
 
